Fixed issue on landing page were footer and contianer overlapped.

--- a/src/app/pages/landing-page/landing-page.component.css
+++ b/src/app/pages/landing-page/landing-page.component.css
@@ -88,6 +88,7 @@ button fa-icon {
 }
 
 .form-container {
+  height: max-content;
   width: 100% !important;
 
 }
